# bver

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  publish.yml  release.yml
python/bver_cli/: __init__.py  __main__.py
scripts/: install.ps1  install.sh
src/: bump.rs  cast.rs  finders.rs  git.rs  lib.rs  loader.rs  main.rs  python.rs  schema.rs  tui.rs  version.rs
