[package]
name = "bver"
version = "0.0.0"
edition = "2024"
description = "A bump-version tool for multi-language projects"
license = "MIT"
repository = "https://github.com/flaport/bver"
keywords = ["version", "bump", "semver", "release"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = { version = "0.8", features = ["preserve_order"] }

[package.metadata.bver]
git-action = "commit-and-tag"

[[package.metadata.bver.file]]
src = "Cargo.toml"
kind = "semver"
