[package]
name = "bver"
version = "0.0.2"
edition = "2024"
description = "A bump-version tool for multi-language projects"
license = "MIT"
repository = "https://github.com/flaport/bver"
keywords = ["version", "bump", "semver", "release"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = { version = "0.9.11", features = ["preserve_order"] }

[package.metadata.bver]
git-action = "commit-tag-and-push"

[[package.metadata.bver.file]]
src = "Cargo.toml"
kind = "semver"

[[package.metadata.bver.file]]
src = "README.md"
kind = "semver"
