[package]
name = "bver"
version = "0.1.3"
edition = "2024"
description = "A bump-version tool for multi-language projects"
license = "MIT"
repository = "https://github.com/flaport/bver"
keywords = ["version", "bump", "semver", "release"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "_bver"
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = { version = "1.0", features = ["preserve_order"] }
pyo3 = { version = "0.28", features = ["extension-module"], optional = true }

[features]
python = ["dep:pyo3"]

[package.metadata.bver.git]
actions = ["add-all", "commit", "tag", "push"]

[[package.metadata.bver.file]]
src = "Cargo.toml"
kind = "semver"

[[package.metadata.bver.file]]
src = "README.md"
kind = "semver"

[[package.metadata.bver.file]]
src = "pyproject.toml"
kind = "semver"
